alerts - bump font size down a bit on mobile

--- a/libraries/libraries/static/scss/components/alerts/_alert-banner.scss
+++ b/libraries/libraries/static/scss/components/alerts/_alert-banner.scss
@@ -4,12 +4,16 @@
     color: $white;
     display: flex;
     font-family: $font-family-sans-serif;
-    font-size: 18px;
+    font-size: 14px;
     font-weight: 400;
     justify-content: center;
     margin-bottom: 4px;
     max-height: $alert-max-height;
     padding: 16px;
+
+    @include respond($break-medium) {
+        font-size: 18px;
+    }
 
     &__icon {
         background-color: $white;
