LinkedImageBlock with choice of page, external URL
NOTE: this not only has migrations but you must run manage.py convert_image_blocks!!!
YOU MUST! This is basically a migration for a StreamField.

Closes #90

Commit does two things:
- update LinkedImageBlock to give a choice of internal page or external URL field, making neither required
- convert all ImageBlocks into this new LinkedImageBlock

--- a/libraries/categories/templates/categories/blocks/linked-image.html
+++ b/libraries/categories/templates/categories/blocks/linked-image.html
@@ -1,7 +1,7 @@
 {% load wagtailimages_tags wagtailcore_tags %}
 
 <div class="blog-post__image_wrapper">
-    <a href="{{ value.link }}">
+    {% if value.url %}<a href="{{ value.url }}">{% endif %}
         {% if row and service_page %}
             {# image inside a row block on a ServicePage #}
             {% image value.image width-420 class="blog-post__image" %}
@@ -15,7 +15,7 @@
             {# full width BlogPage image #}
             {% image value.image width-600 class="blog-post__image" %}
         {% endif %}
-    </a>
+    {% if value.url %}</a>{% endif %}
 
     {% if value.caption %}
         <section class="blog-post__image-description">
