accessibility - label for search input

--- a/libraries/libraries/templates/components/search/search-input.html
+++ b/libraries/libraries/templates/components/search/search-input.html
@@ -1,5 +1,6 @@
 <div class="search-input">
 	<input
+		aria-label="Search"
 		class="search-input__input"
 		name="q"
 		placeholder="Enter a search term..."
