--- a/libraries/hours/templates/hours/hours_page.html
+++ b/libraries/hours/templates/hours/hours_page.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static wagtailcore_tags wagtailimages_tags %}
+{% wagtail_site as current_site %}
 
 {% block content %}
 <div class="wrapper wrapper--padding-top" style="max-width: 840px">
@@ -85,14 +86,14 @@
 {
     "@context": "http://schema.org/",
     "@type": "WebPage",
-    "@id": "{{ request.site.root_url }}{% pageurl page %}",
+    "@id": "{{ current_site.root_url }}{% pageurl page %}",
 	"name": "{{ page.title|escapejs }} | CCA Libraries",
 	{% if page.main_image %}
     {% image page.main_image original as main_image %}
 	"primaryImageOfPage": {
 		"@type": "ImageObject",
 		"height": {{ main_image.height }},
-		"url": "{{ request.site.root_url }}{{ main_image.url }}",
+		"url": "{{ current_site.root_url }}{{ main_image.url }}",
 		"width": {{ main_image.width }}
 	},
 	{% endif %}
@@ -103,7 +104,7 @@
 	"license": "https://creativecommons.org/licenses/by/4.0/",
 	"publisher": {
 		"@type": "Library",
-        "@id": "{{ request.site.root_url }}",
+        "@id": "{{ current_site.root_url }}",
 		"name": "California College of the Arts Libraries",
         "image": {
 			"@type": "ImageObject",
