--- a/libraries/staff/templates/staff/staff_list_page.html
+++ b/libraries/staff/templates/staff/staff_list_page.html
@@ -1,19 +1,20 @@
 {% extends "base.html" %}
 {% load static libraries_tags wagtailcore_tags wagtailimages_tags %}
+{% wagtail_site as current_site %}
 
 {% block schema_org %}
 <script type="application/ld+json">
 {
     "@context": "http://schema.org/",
     "@type": "WebPage",
-    "@id": "{{ request.site.root_url }}{% pageurl page %}",
+    "@id": "{{ current_site.root_url }}{% pageurl page %}",
 	"name": "Staff List | CCA Libraries",
     {% if page.main_image %}
     {% image page.main_image original as main_image %}
 	"primaryImageOfPage": {
 		"@type": "ImageObject",
 		"height": {{ main_image.height }},
-		"url": "{{ request.site.root_url }}{{ main_image.url }}",
+		"url": "{{ current_site.root_url }}{{ main_image.url }}",
 		"width": {{ main_image.width }}
 	},
     {% endif %}
@@ -23,7 +24,7 @@
 	"license": "https://creativecommons.org/licenses/by/4.0/",
     "publisher": {
 		"@type": "Library",
-        "@id": "{{ request.site.root_url }}",
+        "@id": "{{ current_site.root_url }}",
 		"name": "California College of the Arts Libraries",
         "address": [
             {
