use node sass-lint instead of ruby, reformat some SASS
reduces reliance on more external tools/config, no reason why
we shouldn't just do this in node which is already building
the CSS and even running the linter with an npm script

--- a/libraries/libraries/static/scss/components/_button.scss
+++ b/libraries/libraries/static/scss/components/_button.scss
@@ -11,6 +11,6 @@
     text-decoration: none;
 
     &:hover {
-        border-color: rgb(35, 35, 35);
+        border-color: $btn-hover-light-gray;
     }
 }
