--- a/libraries/libraries/static/scss/fonts/_cca-fonts.scss
+++ b/libraries/libraries/static/scss/fonts/_cca-fonts.scss
@@ -5,22 +5,19 @@
 @font-face {
     font-display: fallback;
     font-family: 'Brown';
-    src: url('/static/fonts/lineto-brown-regular.woff2') format('woff2'),
-        url('/static/fonts/lineto-brown-regular.woff') format('woff');
+    src: url('/static/fonts/lineto-brown-regular.woff2') format('woff2'), url('/static/fonts/lineto-brown-regular.woff') format('woff');
 }
 @font-face {
     font-display: fallback;
     font-family: 'Brown';
-    src: url('/static/fonts/lineto-brown-bold.woff2') format('woff2'),
-        url('/static/fonts/lineto-brown-bold.woff') format('woff');
     font-weight: bold;
+    src: url('/static/fonts/lineto-brown-bold.woff2') format('woff2'), url('/static/fonts/lineto-brown-bold.woff') format('woff');
 }
 @font-face {
     font-display: fallback;
     font-family: 'Brown';
-    src: url('/static/fonts/lineto-brown-italic.woff2') format('woff2'),
-        url('/static/fonts/lineto-brown-italic.woff') format('woff');
     font-style: italic;
+    src: url('/static/fonts/lineto-brown-italic.woff2') format('woff2'), url('/static/fonts/lineto-brown-italic.woff') format('woff');
 }
 
 // @TODO obtain files for Le Corbusier, our brand "stencil" font
