--- a/libraries/libraries/static/scss/utilities/_clearfix.scss
+++ b/libraries/libraries/static/scss/utilities/_clearfix.scss
@@ -1,6 +1,6 @@
 @mixin clearfix {
-    &:before,
-    &:after {
+    &::before,
+    &::after {
         clear: both;
         content: '';
         display: table;
