--- a/libraries/libraries/static/scss/settings/_colors.scss
+++ b/libraries/libraries/static/scss/settings/_colors.scss
@@ -1,19 +1,19 @@
 // Project color mixins
 // These allow for easy alpha manipulation
 
-@function black($opacity:1) {
+@function black($opacity: 1) {
     @return rgba(7, 7, 7, $opacity);
 }
 
-@function white($opacity:1) {
+@function white($opacity: 1) {
     @return rgba(255, 255, 255, $opacity);
 }
 
-@function purple($opacity:1) {
+@function purple($opacity: 1) {
     @return rgba(114, 30, 160, $opacity);
 }
 
-// Main project colours
+// Main project colors
 $black: black();
 $white: white();
 
@@ -22,6 +22,10 @@ $blue: rgba(0, 118, 160, 1);
 $purple: purple();
 $green: rgba(183, 191, 16, 1);
 $turquoise: rgba(23, 191, 179, 1);
+
+// component colors
+$btn-hover-light-gray: rgb(35, 35, 35);
+
 // these are copied from Portal & used to recreate its "cards" feature
 // see portal/static/styles/portal/sass/partials/_variables.scss
 // Colors from CCA Marketing & Communications Styleguide
