--- a/libraries/libraries/static/scss/components/blocks/_product-grid-block.scss
+++ b/libraries/libraries/static/scss/components/blocks/_product-grid-block.scss
@@ -4,63 +4,67 @@
 // ========================================
 
 .product-grid-block {
-  display: flex;
-  flex-flow: row wrap;
+    display: flex;
+    flex-flow: row wrap;
 
-  &__item {
-    padding: 10px;
-    height: 100%;
-  }
-
-  &__content {
-    background-color: $ccaVeryLightGray;
-    padding: 20px;
-    width: 275px;
-    height: 325px;
-    overflow: hidden;
-
-    @media (min-width: $screen-xs-min) {
-      width: 230px;
+    &__item {
+        height: 100%;
+        padding: 10px 7px;
     }
-  }
 
-  &__no-link-item {
-    background-color: $white;
-  }
+    &__content {
+        background-color: $ccaVeryLightGray;
+        height: 325px;
+        overflow: hidden;
+        padding: 20px 10px;
+        width: 270px;
 
-  &__img {
-    max-width: 150px;
-    margin: 0 auto;
-
-    img {
-      width: 100%;
-      height: auto;
+        @media (min-width: $screen-xs-min) {
+            width: 216px;
+        }
     }
-  }
 
-  &__text {
-    margin-top: 16px;
-    text-align: center;
-    width: 190px;
-    height: 117px;
-    overflow: hidden;
-    hyphens: auto;
-  }
+    &__content:hover .product-grid-block__caption,
+    &__content:hover .product-grid-block__title {
+        text-decoration: underline;
+    }
 
-  &__title {
-    font-size: 18px;
-    word-break: keep-all;
-    margin-bottom: 8px;
-  }
+    &__no-link-item {
+        background-color: $white;
+    }
 
-  &__caption {
-    display: block;
-    font-size: 16px;
-    color: $black;
-    overflow: hidden;
-    text-overflow: ellipsis; /* number of lines to show */ /* fallback */
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 5; /* number of lines to show */ /* fallback */
-  }
+    &__img {
+        margin: 0 auto;
+        max-width: 150px;
+
+        img {
+            height: auto;
+            width: 100%;
+        }
+    }
+
+    &__text {
+        height: 117px;
+        hyphens: auto;
+        margin-top: 16px;
+        overflow: hidden;
+        text-align: center;
+        width: 190px;
+    }
+
+    &__title {
+        color: $ccaBlue;
+        font-size: 18px;
+        margin-bottom: 8px;
+        word-break: keep-all;
+    }
+
+    &__caption {
+        color: $black;
+        display: block;
+        font-size: 16px;
+        overflow: hidden;
+        text-decoration: none;
+        text-overflow: ellipsis; /* number of lines to show */ /* fallback */
+    }
 }
