--- a/libraries/libraries/static/scss/components/blocks/_product-grid-block.scss
+++ b/libraries/libraries/static/scss/components/blocks/_product-grid-block.scss
@@ -9,17 +9,22 @@
 
     &__item {
         height: 100%;
-        padding: 10px 7px;
+        padding: 10px;
+
+        @media (min-width: $screen-xs-min) {
+            padding: 10px 7px;
+        }
     }
 
     &__content {
         background-color: $ccaVeryLightGray;
         height: 325px;
         overflow: hidden;
-        padding: 20px 10px;
-        width: 270px;
+        padding: 20px;
+        width: 275px;
 
         @media (min-width: $screen-xs-min) {
+            padding: 20px 10px;
             width: 216px;
         }
     }
