--- a/libraries/exhibitions/templates/components/artwork-embed.html
+++ b/libraries/exhibitions/templates/components/artwork-embed.html
@@ -1,9 +1,9 @@
 {% load wagtailcore_tags wagtailimages_tags %}
 
 {% if work.embed_code != '' %}
-<div class="gallery--work js-gallery--work" data-iframe="true"
-    data-src="{{ work.embed_code }}" data-sub-html=".js-caption"
-    style="width:{{page.column_width}}px;">
+<div class="gallery--work js-gallery--work" data-download-url="false"
+    data-iframe="true" data-src="{{ work.embed_code }}"
+    data-sub-html=".js-caption" style="width:{{page.column_width}}px;">
     <div class="gallery--work__html">
         {% if work.image %}
             {% include 'components/ytp-btn.html' %}
