focus on search text input when it opens, closes #118

--- a/libraries/libraries/templates/components/search/search-input.html
+++ b/libraries/libraries/templates/components/search/search-input.html
@@ -1,7 +1,7 @@
 <div class="search-input">
 	<input
 		aria-label="Search"
-		class="search-input__input"
+		class="search-input__input js-search-input"
 		name="q"
 		placeholder="Enter a search term..."
 		type="text"
