add CCA indigenous land acknowledgement, closes #111

--- a/libraries/libraries/templates/components/footer/footer.html
+++ b/libraries/libraries/templates/components/footer/footer.html
@@ -5,5 +5,16 @@
 			{% include 'components/footer/footer-info.html' %}
 			{% include 'components/footer/footer-sites.html' %}
 		</ul>
+		<div class="footer__land-acknowledgement">
+            <hr>
+            <p class="footer-section__text">
+              CCA campuses are located in Huichin and Yelamu, also known as
+			  Oakland and San Francisco, on the unceded territories of Chochenyo
+			  and Ramaytush Ohlone peoples.
+              <a href="https://www.cca.edu/about/indigenous-land-acknowledgement/"
+			     target="_blank">Learn More
+              </a>
+            </p>
+        </div>
 	</div>
 </footer>
