--- a/libraries/libraries/static/scss/components/footer/_footer.scss
+++ b/libraries/libraries/static/scss/components/footer/_footer.scss
@@ -17,3 +17,9 @@
         flex-wrap: nowrap;
     }
 }
+
+.footer__land-acknowledgement {
+    // space so Libraryh3lp widget doesn't overlap
+    margin-bottom: 39px;
+    text-align: center;
+}
