--- a/libraries/libraries/templates/components/head/head.html
+++ b/libraries/libraries/templates/components/head/head.html
@@ -2,9 +2,7 @@
 
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<title>{% block title %}
-    {% if self.seo_title %}{{ self.seo_title }}{% else %}{{ page.title }}{% endif %}
-{% endblock %} | CCA Libraries</title>
+<title>{% block title %}{% if self.seo_title %}{{ self.seo_title }}{% elif search_query %}Search: {{search_query|striptags|truncatechars:32}}{% else %}{{ page.title }}{% endif %}{% endblock %} | CCA Libraries</title>
 {% if self.search_description %}
     <meta name="description" content="{{self.search_description}}" />
     <meta property="og:description" content="{{self.search_description}}"/>
