exhib - only show index eplilogue if it has content

--- a/libraries/exhibitions/templates/exhibitions/exhibits_index_page.html
+++ b/libraries/exhibitions/templates/exhibitions/exhibits_index_page.html
@@ -25,9 +25,11 @@
     {% endfor %}
     </ul>
 
-    <section class="epilogue">
-        {{page.epilogue|richtext}}
-    </section>
+    {% if page.epilogue %}
+        <section class="epilogue">
+            {{page.epilogue|richtext}}
+        </section>
+    {% endif %}
 </div>
 
 {% endblock %}
