exhib - paginate the exhibitions index, closes #123

--- a/libraries/exhibitions/templates/exhibitions/exhibits_index_page.html
+++ b/libraries/exhibitions/templates/exhibitions/exhibits_index_page.html
@@ -25,6 +25,8 @@
     {% endfor %}
     </ul>
 
+    {% include 'exhibitions/exhibit-pagination.html' %}
+
     {% if page.epilogue %}
         <section class="epilogue">
             {{page.epilogue|richtext}}
