--- a/libraries/libraries/static/scss/exhibits.scss
+++ b/libraries/libraries/static/scss/exhibits.scss
@@ -44,6 +44,7 @@
 @import 'components/header/header-search-box';
 @import 'components/search/search-box';
 @import 'components/search/search-input';
+@import 'components/search/search-pagination';
 @import 'components/exhibits/search';
 
 // -- Misc
