insta - change `image` field to `image_url`

--- a/libraries/home/templates/home/home-instagram.html
+++ b/libraries/home/templates/home/home-instagram.html
@@ -7,7 +7,7 @@
 			<img
 				alt="Instagram image"
 				class="home-news-item__image "
-				src="{{ instagram.image }}"
+				src="{{ instagram.image_url }}"
 				title="Image from Instagram"
 			/>
 		</a>
