rel=noopener on land acknowledgement link
conforms to best practices, see
https://web.dev/external-anchors-use-rel-noopener/?utm_source=lighthouse&utm_medium=devtools

--- a/libraries/libraries/templates/components/footer/footer.html
+++ b/libraries/libraries/templates/components/footer/footer.html
@@ -12,7 +12,7 @@
 			  Oakland and San Francisco, on the unceded territories of Chochenyo
 			  and Ramaytush Ohlone peoples.
               <a href="https://www.cca.edu/about/indigenous-land-acknowledgement/"
-			     target="_blank">Learn More
+			     target="_blank" rel="noopener">Learn More
               </a>
             </p>
         </div>
