--- a/libraries/libraries/templates/base.html
+++ b/libraries/libraries/templates/base.html
@@ -19,11 +19,9 @@
         {% include 'components/footer/footer.html' %}
 
         {# Global javascript #}
-        <script
-			src="https://code.jquery.com/jquery-3.2.1.min.js"
-			integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-			crossorigin="anonymous"
-		></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+            crossorigin="anonymous"></script>
         <script type="text/javascript" src="{% static 'js/main.min.js' %}"></script>
 
         {% include 'components/ga.html' %}
