switch to using whitenoise's `static` template tag
instead of the default django one

--- a/libraries/blog/templates/blog/blog_page.html
+++ b/libraries/blog/templates/blog/blog_page.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
-{% load static libraries_tags wagtailcore_tags wagtailimages_tags %}
+{% load libraries_tags wagtailcore_tags wagtailimages_tags %}
+{% load static from staticfiles %}
 {% wagtail_site as current_site %}
 
 {% block schema_org %}
