--- a/libraries/exhibitions/templates/components/header.html
+++ b/libraries/exhibitions/templates/components/header.html
@@ -1,4 +1,5 @@
-{% load alert_tags static %}
+{% load alert_tags %}
+{% load static from staticfiles %}
 <header class="header js-header">
 	<div class="wrapper wrapper--header">
 		<a
