--- a/libraries/exhibitions/templates/exhibitions/exhibit-pagination.html
+++ b/libraries/exhibitions/templates/exhibitions/exhibit-pagination.html
@@ -1,4 +1,5 @@
-{% load static wagtailcore_tags %}
+{% load wagtailcore_tags %}
+{% load static from staticfiles %}
 
 <div class="search-pagination">
 	{% if exhibits.has_previous %}
