--- a/libraries/exhibitions/templates/exhibits-base.html
+++ b/libraries/exhibitions/templates/exhibits-base.html
@@ -1,4 +1,5 @@
-{% load alert_tags static wagtailuserbar %}
+{% load alert_tags wagtailuserbar %}
+{% load static from staticfiles %}
 {# based on libraries/templates/base.html but different CSS #}
 
 <!DOCTYPE html>
