--- a/libraries/staff/templates/staff/staff_member_schema_org.html
+++ b/libraries/staff/templates/staff/staff_member_schema_org.html
@@ -1,4 +1,5 @@
-{% load static wagtailcore_tags %}
+{% load wagtailcore_tags %}
+{% load static from staticfiles %}
 {% wagtail_site as current_site %}
 <script type="application/ld+json">
 {
