--- a/libraries/categories/templates/categories/web_page_schema_org.html
+++ b/libraries/categories/templates/categories/web_page_schema_org.html
@@ -1,4 +1,5 @@
-{% load static libraries_tags wagtailcore_tags wagtailimages_tags %}
+{% load libraries_tags wagtailcore_tags wagtailimages_tags %}
+{% load static from staticfiles %}
 {% wagtail_site as current_site %}
 
 {# generic schema.org data which we should be able to use for most pages #}
