--- a/libraries/exhibitions/templates/components/head.html
+++ b/libraries/exhibitions/templates/components/head.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static from staticfiles %}
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <title>
