--- a/libraries/exhibitions/templates/exhibitions/exhibits_index_page.html
+++ b/libraries/exhibitions/templates/exhibitions/exhibits_index_page.html
@@ -1,5 +1,6 @@
 {% extends "exhibits-base.html" %}
-{% load static libraries_tags wagtailcore_tags wagtailimages_tags %}
+{% load libraries_tags wagtailcore_tags wagtailimages_tags %}
+{% load static from staticfiles %}
 {% wagtail_site as current_site %}
 
 {% block body_class %}exhibits-index{% endblock %}
