--- a/libraries/hours/templates/hours/hours_page.html
+++ b/libraries/hours/templates/hours/hours_page.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
-{% load static wagtailcore_tags wagtailimages_tags %}
+{% load wagtailcore_tags wagtailimages_tags %}
+{% load static from staticfiles %}
 {% wagtail_site as current_site %}
 
 {% block content %}
