--- a/libraries/libraries/templates/base.html
+++ b/libraries/libraries/templates/base.html
@@ -1,4 +1,5 @@
-{% load alert_tags static wagtailuserbar %}
+{% load alert_tags wagtailuserbar %}
+{% load static from staticfiles %}
 <!DOCTYPE html>
 <html class="no-js" lang="en">
     <head>
