--- a/libraries/libraries/static/summon/scss/_custom_panels.scss
+++ b/libraries/libraries/static/summon/scss/_custom_panels.scss
@@ -12,7 +12,7 @@
         .panelImage {
             display: inline;
             float: left;
-            padding:  0em 1em 0.5em 0em;
+            padding:  0 1em .5em 0;
         }
     }
 }
