--- a/libraries/libraries/static/summon/scss/summon.scss
+++ b/libraries/libraries/static/summon/scss/summon.scss
@@ -1,20 +1,22 @@
-@import 'colors.scss';
-@import 'alert.scss';
-@import 'custom_panels.scss';
+@import 'colors';
+@import 'alert';
+@import 'custom_panels';
 
 // main logo size/spacing on large screens
-div[size="large"] .logo {
+div[size='large'] .logo {
     margin-top: 10em;
 }
 
 // "did you mean" styles, larger font & more focal
 // ID selector for specificity
+// sass-lint:disable no-ids
 #ng-app .didYouMean {
     @extend .alert;
     @extend .alert-warning;
     font-size: 16px;
     font-weight: bold;
 }
+// sass-lint:enable no-ids
 
 // make left-side facets more obvious, #3
 // these styles copied from the base <a> style
@@ -33,10 +35,11 @@ div[size="large"] .logo {
         text-decoration: underline;
     }
 }
-//hello
+
 // hide the right-side links in formatted citation lists
 // they make copy-pasting into documents difficult
-li[ng-repeat="citation in citations"] a {
+// sass-list:disable no-important
+li[ng-repeat='citation in citations'] a {
     display: none !important;
 }
 
@@ -88,7 +91,7 @@ a.clearRefinements.customPrimaryLink {
     width: 0;
 }
 
-.facetField.collapsible h3 a[aria-pressed="false"]::after {
+.facetField.collapsible h3 a[aria-pressed='false']::after {
     border-bottom: 4px solid #000;
     border-top: 0;
     vertical-align: super;
@@ -97,7 +100,7 @@ a.clearRefinements.customPrimaryLink {
 // even the top/bottom space around "clear filter" btn
 .clearRefinementsContainer {
     padding-top: 1.5em;
-    padding-bottom: 0em;
+    padding-bottom: 0;
 }
 
 // "apply" filter button
@@ -117,22 +120,21 @@ a.btn.btn-primary.applyBtn {
 
     // "apply" filter button box shadow when active
     &:active {
-        box-shadow: inset 0 5px 15px rgba(0,0,0,0.150);
+        box-shadow: inset 0 5px 15px rgba(0, 0, 0, .15);
     }
 
     // "apply" button when close....
     &.ng-scope {
         background-color: #69a74c;
         border: solid #69a74c 1px;
-        color: white;
+        color: #fff;
     }
 }
 
-
 // email input in "broken links" dialog
-input[name="email"]:invalid {
+input[name='email']:invalid {
     border-color: $error;
-    box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 8px lighten($error, 20%);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px lighten($error, 20%);
 }
 
 // increase padding
@@ -156,3 +158,4 @@ h3,
         padding-right: .5em;
     }
 }
+// sass-list:enable no-important
