--- a/libraries/libraries/static/scss/settings/_font-families.scss
+++ b/libraries/libraries/static/scss/settings/_font-families.scss
@@ -1,4 +1,4 @@
 $font-family-sans-serif: 'Brown', 'Raleway', 'Helvetica Neue', sans-serif;
-$font-family-serif: 'Merriweather', 'Georgia', serif;
+$font-family-serif: 'The Serif', 'Merriweather', 'Georgia', serif;
 $font-family-stencil: 'Le Corbusier', 'Stardos Stencil', sans-serif;
 $font-family-monospace: 'Consolas', 'Liberation Mono', 'Menlo', 'Courier', monospace;
