--- a/libraries/libraries/static/summon/scss/summon.scss
+++ b/libraries/libraries/static/summon/scss/summon.scss
@@ -32,5 +32,5 @@ li[ng-repeat='citation in citations'] a {
 // email input in "broken links" dialog
 input[name='email']:invalid {
     border-color: $error;
-    box-shadow: inset 0 1px 1px color.adjust($black, $alpha: -.9), 0 0 8px lighten($error, 20%);
+    box-shadow: inset 0 1px 1px adjust-color($black, $alpha: -.9), 0 0 8px lighten($error, 20%);
 }
