more concise Koha login text in footer

--- a/libraries/libraries/templates/components/footer/footer-info.html
+++ b/libraries/libraries/templates/components/footer/footer-info.html
@@ -7,7 +7,7 @@
 			class="footer-section__social-link koha button"
 			href="https://library.cca.edu/cgi-bin/koha/opac-user.pl"
 			title="CCA Libraries' news"
-		>Sign into your library account</a>
+		>My library account</a>
 		<a
 			href="https://www.facebook.com/ccalibrary"
 			title="Like us on Facebook"
