perf - right-size header logo images & add height/width attributes
per feedback from Chrome Lighthouse performance report

--- a/libraries/exhibitions/templates/components/header.html
+++ b/libraries/exhibitions/templates/components/header.html
@@ -11,8 +11,9 @@
 			<img
 				alt="CCA Libraries Logo"
 				class="header__logo"
-
 				src="{% static 'images/logo-inverted.png' %}"
+				height="34"
+				width="240"
 			/>
 		</a>
 
