--- a/libraries/libraries/templates/components/header/header.html
+++ b/libraries/libraries/templates/components/header/header.html
@@ -11,6 +11,8 @@
 				alt="CCA Libraries Logo"
 				class="header__logo"
 				src="{% static 'images/logo.png' %}"
+				height="34"
+				width="240"
 			/>
 		</a>
 
